--- a/index.html
+++ b/index.html
@@ -199,6 +199,30 @@
       <button class="btn warn" onclick="resetInspectionStatus()">분기 리셋</button>
     </div>
   </section>
+<!-- 점검 예정 대시보드 -->
+<section class="card" id="schedule-dashboard">
+  <h2>점검 예정</h2>
+
+  <div class="schedule-wrap">
+
+    <!-- 소형 크레인 -->
+    <div class="schedule-box">
+      <h3>소형 / 서비스 크레인</h3>
+      <div class="schedule-list" id="schedule-small">
+        <!-- JS로 카드 삽입 -->
+      </div>
+    </div>
+
+    <!-- 타워 크레인 -->
+    <div class="schedule-box">
+      <h3>타워 크레인</h3>
+      <div class="schedule-list" id="schedule-tower">
+        <!-- JS로 카드 삽입 -->
+      </div>
+    </div>
+
+  </div>
+</section>
 
   <!-- 메뉴 -->
   <section class="card">
