--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
   <section class="card">
     <h2>리스트</h2>
     <div class="btn-row">
-      <button class="btn" onclick="openCraneList()">크레인 리스트</button>
+      <button class="btn" onclick="openCraneList()">소형크레인 리스트</button>
+      <button class="btn" onclick="openTowerCraneList()">타워크레인 리스트</button>
       <button class="btn" onclick="openRemarkList()">비고 리스트</button>
       <button class="btn" onclick="openHoldList()">보류 리스트</button>
     </div>
